--- a/gsb/.classpath
+++ b/gsb/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/Cours 2BTS/SLAM 4/itext-5.5.2/mysql-connector-odbc-noinstall-5.3.6-winx64.zip"/>
+	<classpathentry kind="lib" path="D:/Java-Archive/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="D:/Java-Archive/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
